# LU

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: LUDecomposition.h  Matrix.h  Permutation.h  Vector.h  aliases.h  errors.h  extra.h  inverse.h  io.h  norm.h  numcomp.h  numeric.h  oldies.h  resol.h  sistema.h
src/: LUDecomposition.cpp  Matrix.cpp  Permutation.cpp  errors.cpp  extra.cpp  inverse.cpp  io.cpp  lu.cpp  main.cpp  norm.cpp  oldies.cpp  resol.cpp  sistema.cpp
test/: main.cpp  test_lu.cpp
test/include/: debug.h
test/src/: test_lu.cpp  test_other.cpp  test_resol.cpp  test_sistema.cpp
